--- a/package.json
+++ b/package.json
@@ -22,33 +22,33 @@
     "postinstall": "patch-package"
   },
   "dependencies": {
-    "@actions/core": "^1.10.0",
+    "@actions/core": "1.11.1",
     "@octokit/rest": "^19.0.7",
     "absolutify": "^0.1.0",
     "apicache": "^1.6.3",
-    "async": "^3.2.4",
-    "axios": "^1.3.4",
+    "async": "3.2.6",
+    "axios": "1.9.0",
     "body-parser": "^1.20.2",
     "connect-flash": "^0.1.1",
     "dateformat": "^4.6.3",
     "dockerode": "^3.3.4",
-    "ejs": "^3.1.8",
+    "ejs": "3.1.10",
     "express": "^4.18.2",
     "express-partials": "^0.3.0",
-    "express-session": "^1.17.3",
+    "express-session": "1.18.1",
     "html-to-text": "^9.0.4",
     "patch-package": "^6.5.1",
-    "pg": "^8.10.0",
+    "pg": "8.16.0",
     "pg-hstore": "^2.3.4",
     "probot": "^12.3.0",
     "require-context": "^1.1.0",
-    "semver": "^7.3.8",
-    "sequelize": "^6.29.1",
+    "semver": "7.7.2",
+    "sequelize": "6.37.7",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
     "https-localhost": "^4.7.0",
-    "jest": "^29.5.0",
+    "jest": "29.7.0",
     "nock": "^12.0.0",
     "nodemon": "^2.0.4",
     "smee-client": "^1.2.2",
